# zfp_simple_example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pgm.f90  wip.f90  zfp_example.f90  zfp_fct_wrapper.F90  zfp_fct_wrapper.f90
.github/workflows/: CI.yml
